# thunderwipe-discord-vacation-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  bot.py  db.py  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  release.yml
charts/: heatmap.py
commands/: query.py  vacation.py
tests/: test_date_parser.py  test_db.py  test_heatmap.py
utils/: date_parser.py  permissions.py  pinned_heatmap.py
